kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpplint
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dpplint
  template:
    metadata:
      labels:
        app: dpplint
    spec:
      containers:
      - name: dpplint
        image: oydeu/dpplint:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 384Mi
          limits:
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /version
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /up
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
