kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dpplint
spec:
  selector:
    app: dpplint
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
