kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dpplint
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dpplint.ownyourdata.eu
    secretName: dpplint-tls
  rules:
  - host: dpplint.ownyourdata.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dpplint
            port:
              number: 80
